--- a/ServempMVC/ServempMVC.csproj
+++ b/ServempMVC/ServempMVC.csproj
@@ -44,6 +44,8 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Data.Entity" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -185,11 +187,38 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="calificaciones.cs">
+      <DependentUpon>Creditos.tt</DependentUpon>
+    </Compile>
+    <Compile Include="clientes.cs">
+      <DependentUpon>Creditos.tt</DependentUpon>
+    </Compile>
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Creditos.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Creditos.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Creditos.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Creditos.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Creditos.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Creditos.edmx</DependentUpon>
+    </Compile>
     <Compile Include="Filters\InitializeSimpleMembershipAttribute.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
+    </Compile>
+    <Compile Include="legajos.cs">
+      <DependentUpon>Creditos.tt</DependentUpon>
+    </Compile>
+    <Compile Include="lotes.cs">
+      <DependentUpon>Creditos.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\CreditosModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -251,6 +280,23 @@
     <Content Include="Content\themes\base\minified\jquery.ui.theme.min.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
+    <EntityDeploy Include="Creditos.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>Creditos.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="Creditos.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>Creditos.edmx</DependentUpon>
+      <LastGenOutput>Creditos.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="Creditos.edmx.diagram">
+      <DependentUpon>Creditos.edmx</DependentUpon>
+    </Content>
+    <Content Include="Creditos.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>Creditos.edmx</DependentUpon>
+      <LastGenOutput>Creditos.cs</LastGenOutput>
+    </Content>
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.8.2.js" />
     <Content Include="Scripts\jquery-1.8.2.min.js" />
@@ -312,6 +358,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
