--- a/ServempMVC/ServempMVC.csproj
+++ b/ServempMVC/ServempMVC.csproj
@@ -220,10 +220,11 @@
     <Compile Include="lotes.cs">
       <DependentUpon>Creditos.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\CreditosModels.cs" />
+    <Compile Include="Models\BuscadorClientes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\BusquedaClientes.css" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_glass_55_fbf9ee_1x400.png" />
@@ -298,6 +299,7 @@
       <LastGenOutput>Creditos.cs</LastGenOutput>
     </Content>
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
+    <Content Include="Scripts\BusquedaClientes.js" />
     <Content Include="Scripts\jquery-1.8.2.js" />
     <Content Include="Scripts\jquery-1.8.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
@@ -352,6 +354,7 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Web.config" />
     <Content Include="Views\Home\ClientesListado.cshtml" />
+    <Content Include="Views\Home\GetDatosCliente.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
